istioingress.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-04-09T21:32:53Z"
  labels:
    app: istio-ingressgateway2
    install.operator.istio.io/owning-resource: installed-state
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: ingressgateway2
    istio.io/rev: default
    operator.istio.io/component: IngressGateways
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.21.0
    release: istio
  name: istio-ingressgateway2
  namespace: default
  resourceVersion: "729749"
  uid: 8d3fc03d-85a3-45a5-9ed5-18d213a36512
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.108.90.232
  clusterIPs:
  - 10.108.90.232
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 31564
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 32354
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 32320
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: istio-ingressgateway2
    istio: ingressgateway2
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.108.90.232
