listener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: listener-ingress.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listener
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: listener2
                port:
                  number: 8080
