listener-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: listener.test.com
  - http:
      paths:
      - path: /listener
        pathType: Exact
        backend:
          service:
            name: listener
            port:
              number: 9080
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: listener
            port:
              number: 9080
      - path: /login
        pathType: Exact
        backend:
          service:
            name: listener
            port:
              number: 9080
      - path: /logout
        pathType: Exact
        backend:
          service:
            name: listener
            port:
              number: 9080
      - path: /api/v1/products
        pathType: Prefix
        backend:
          service:
            name: listener
            port:
              number: 9080
---
